fix: contrast ratio for links

--- a/src/app.scss
+++ b/src/app.scss
@@ -29,7 +29,7 @@
     }
 
     a {
-        @apply text-blue-500;
+        @apply text-indigo-600;
     }
 
     code {
